fixed another scrollbar-bug

--- a/css/contacts/add_contacts.css
+++ b/css/contacts/add_contacts.css
@@ -248,7 +248,7 @@
 }
 
 .ec-menu-container {
-  position: absolute;
+  position: fixed;
   background: white;
   bottom: 103px;
   right: 16px;
