--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -7,6 +7,7 @@
   height: auto;
   background: rgb(255, 255, 255);
   z-index: 990;
+  overflow: hidden;
   transition: all 300ms ease-in-out;
 }
 .show-overlay.show-card-visible {
